--- a/gmacs.org
+++ b/gmacs.org
@@ -78,21 +78,29 @@ startup take longer and aren't that useful.
 We either load the byte-compiled GMACS configuration file or tangle and load
 the GMACS literate config file (you're reading it!) written in Org Mode.
 #+BEGIN_SRC emacs-lisp :tangle init.el
+(advice-add #'display-startup-echo-area-message :override #'ignore)
+(setq inhibit-startup-message t
+      inhibit-startup-echo-area-message user-login-name
+      inhibit-default-init t
+      initial-major-mode 'fundamental-mode
+      initial-scratch-message nil)
+
 (let ((file-name-handler-alist nil)
       (orgfile (expand-file-name "gmacs.org" user-emacs-directory))
       (elfile (expand-file-name "gmacs.el" user-emacs-directory))
       (elcfile (expand-file-name "gmacs.elc" user-emacs-directory)))
   (if (file-exists-p elcfile)
       (load-file elcfile)
-    (when (or (not (file-exists-p elfile))
-              (file-newer-than-file-p orgfile elfile))
-      (progn
-        (require 'org)
-        (org-babel-tangle-file orgfile)
-        (when (file-exists-p personal-file) (load-file personal-file))))
-    (load-file elfile)))
+    (if (or (not (file-exists-p elfile))
+            (file-newer-than-file-p orgfile elfile))
+        (progn
+          (require 'org)
+          (org-babel-load-file orgfile))
+      (load-file elfile))))
 
-(when (file-exists-p personal-file) (load-file personal-file))
+(let ((personalfile (expand-file-name "personal.el" user-emacs-directory)))
+  (when (file-exists-p personalfile)
+    (load-file personalfile)))
 #+END_SRC
 ** Initialization Settings
 Enable lexical binding.
@@ -168,8 +176,6 @@ I put custom variables outside of my =init.el= file.
 #+BEGIN_SRC emacs-lisp
 (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
 (when (file-exists-p custom-file) (load custom-file))
-
-(setq personal-file (expand-file-name "personal.el" user-emacs-directory))
 #+END_SRC
 Make a variable for personal settings.
 ** Setup Packages
